# Geo_Embedding_Fusion

./: .gitmodules  CLAUDE.md  LICENSE  Makefile  README.md  opencode.json  pyproject.toml
.claude/: experiments.md  settings.json
.claude/commands/: push.md  read.md
.claude/skills/generate-tikz-pdf/: SKILL.md
.claude/skills/kb-ingest/: SKILL.md
.claude/skills/kb-lint/: SKILL.md
.claude/skills/kb-query/: SKILL.md
.claude/skills/mid-notes/: SKILL.md
.claude/skills/post-buyin/: SKILL.md
.claude/skills/post-explain-html/: SKILL.md
.claude/skills/post-explain-world/: SKILL.md
.claude/skills/pre-blindspots/: SKILL.md
.claude/skills/pre-interview/: SKILL.md
.claude/skills/pre-plan/: SKILL.md
.claude/skills/stop-slop/: SKILL.md
.claude/skills/write-research-paper/: SKILL.md
artifacts/: README.md  example_artifact.py
configs/: README.md
configs/0_baselines/: 00_baseline_default.yaml
emb2heights/: README.md  __init__.py  cli.py  config.py  datamodules.py  datasets.py  models.py  trainers.py
knowledge_base/: README.md  SCHEMA.md  index.md  log.md
knowledge_base/sources/: .gitignore  README.md
knowledge_base/wiki/: README.md  overview.md
knowledge_base/wiki/concepts/: canopy_height_estimation.md  embedding_interpretability.md  geospatial_foundation_models.md  label_efficiency.md
knowledge_base/wiki/datasets/: danum_valley_canopy_height.md  esa_worldcover.md  french_dsm_nouvelle_aquitaine.md
knowledge_base/wiki/methods/: alphaearth.md  tessera.md  (+2 more)
paper/: paper.tex
scripts/: README.md  acquire.py  evaluate.py  infer.py  train.py
(+4 files in other folders)
